--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -76,9 +76,26 @@
 				<li><a href="#" class="li-another">BRIDE STYLE</a></li>
 				<li><a href="typo.html" class="li-another">TYPO</a></li>
 				<li><a href="contact.html" class="li-another">CONTACT</a></li>
+				<div class="clear"></div>
 			</ul>
+			<div class="clear"></div>
 		</div>
-		<div class="wedding-right"></div>
+		<div class="wedding-right">
+			<a href="checkout.html">
+    			<h3>
+    				<div class="total">
+    					<span class="simpleCart_total">$0.00</span>
+    					"("
+    					<span id="simpleCart_quantity" class="simpleCart_quantity">0</span>
+    					")"
+    				</div>
+    				<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">
+    					::before
+    				</span>
+    			</h3>	
+			</a>
+			<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+		</div>
 		<div class="clear"></div>
 	</div>
 </div>
