--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -73,7 +73,42 @@
 							</dl>
 					</div>
 				</li>
-				<li><a href="#" class="li-another">BRIDE STYLE</a></li>
+				<li><a href="#" class="li-another">BRIDE STYLE</a>
+					<div class="row">
+							<dl>
+								<dt>Shop</dt>
+								<dd><a href="product.html">New Arrivals</a></dd>
+								<dd><a href="product.html">Men</a></dd>
+								<dd><a href="product.html">Woman</a></dd>
+								<dd><a href="product.html">Accessoires</a></dd>
+								<dd><a href="product.html">Kids</a></dd>
+								<dd><a href="product.html">Login</a></dd>
+								<dd><a href="product.html">Brands</a></dd>
+								<dd><a href="product.html">My Shopping Bag</a></dd>
+							</dl>
+							<dl>
+								<dt>Style Zone</dt>
+								<dd><a href="product.html">Men</a></dd>
+								<dd><a href="product.html">Woman</a></dd>
+								<dd><a href="product.html">Brands</a></dd>
+								<dd><a href="product.html">Kids</a></dd>
+								<dd><a href="product.html">Accessories</a></dd>
+								<dd><a href="product.html">Style Videos</a></dd>
+							</dl>
+							<dl>
+								<dt>Popular Brands</dt>
+								<dd><a href="product.html">Levis</a></dd>
+								<dd><a href="product.html">Persol</a></dd>
+								<dd><a href="product.html">Nike</a></dd>
+								<dd><a href="product.html">Edwin</a></dd>
+								<dd><a href="product.html">New Balance</a></dd>
+								<dd><a href="product.html">Jack & Jones</a></dd>
+								<dd><a href="product.html">Paul Smith</a></dd>
+								<dd><a href="product.html">Ray-Ban</a></dd>
+								<dd><a href="product.html">Wood Wood</a></dd>
+							</dl>
+					</div>
+				</li>
 				<li><a href="typo.html" class="li-another">TYPO</a></li>
 				<li><a href="contact.html" class="li-another">CONTACT</a></li>
 				<div class="clear"></div>
@@ -116,14 +151,28 @@
 	<div class="container">
 		<div class="picture-left pic-1">
 			<div class="pic-left">
-				<figure>
-					<img src="images/b1.jpg">
-					<p>Wedding Dresses</p>
-				</figure>
-				<figure>
-					<img src="images/b2.jpg">
-					<p>BridalParty & Dresses</p>
-				</figure>
+				<div class="pic-left-one">
+					<figure class="effect-bubba">
+						<img src="images/b1.jpg" class="figure-img">
+						<figcaption class="figure-bg" >
+							<h2>Nullam molestie</h2>
+							<p>In sit anet sapien eros Integer in tinvidunt lebore et dolore man=gna aliquw</p>
+						</figcaption>
+					</figure>
+					<div class="left-p">
+						<p>Wedding Dresses</p>
+					</div>
+					<figure class="effect-bubba">
+						<img src="images/b2.jpg" class="figure-img">
+						<figcaption class="figure-bg" >
+							<h2>Nullam molestie</h2>
+							<p>In sit anet sapien eros Integer in tinvidunt lebore et dolore man=gna aliquw</p>
+						</figcaption>
+					</figure>
+					<div class="left-p">
+						<p>BridalParty & Dresses</p>
+					</div>
+				</div>		
 			</div>
 		</div>
 		<div class="picture-middle pic-1">
@@ -131,18 +180,31 @@
 				<img src="images/brid.jpg">
 				<p>Bridesmade Dresses</p>
 			</div>
-			
 		</div>
 		<div class="picture-right pic-1">
 			<div class="pic-right">
-				<figure>
+				<div class="pic-left-one">
+					<figure class="effect-bubba">
 					<img src="images/b3.jpg">
-					<p>Wedding</p>
+					<figcaption class="figure-bg" >
+						<h2>Nullam molestie</h2>
+						<p>In sit anet sapien eros Integer in tinvidunt lebore et dolore man=gna aliquw</p>
+					</figcaption>
 				</figure>
-			<figure>
-				<img src="images/b4.jpg">
-				<p>Most Beautiful</p>
-			</figure>
+				<div class="left-p">
+					<p>Wedding</p>
+				</div>
+				<figure class="effect-bubba">
+					<img src="images/b4.jpg">
+					<figcaption class="figure-bg" >
+						<h2>Nullam molestie</h2>
+						<p>In sit anet sapien eros Integer in tinvidunt lebore et dolore man=gna aliquw</p>
+					</figcaption>
+				</figure>
+				<div class="left-p">
+					<p>Most Beautiful</p>
+				</div>
+				</div>
 			</div>
 		</div>
 		<div class="clear"></div>
