--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -216,7 +216,10 @@
 			<h2>Featured Products</h2>
 		</div>
 		<div class="feature-bottom">
-			<div class="fea-1"><a href="product.html">
+			<div class="fea-1">
+				<a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/f1.jpg">
 				</div>
@@ -230,6 +233,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/f2.jpg">
 				</div>
@@ -243,6 +248,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/f3.jpg">
 				</div>
@@ -257,6 +264,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/f4.jpg">
 				</div>
@@ -271,6 +280,8 @@
 			</div>
 			<div class="clear"></div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/p7.jpg">
 				</div>
@@ -284,6 +295,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/p11.jpg">
 				</div>
@@ -297,6 +310,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/p12.jpg">
 				</div>	
@@ -310,6 +325,8 @@
 			</a>
 			</div>
 			<div class="fea-1"><a href="product.html">
+				<div class="fea-1-sp1 fea-1-sp"><a href="product.html" class="fea-1-aa">Quick View</a></div>
+				<div class="fea-1-sp2 fea-1-sp"><a href="product.html" class="fea-1-aa">ShortList</a></div>
 				<div class="fea-2">
 					<img src="images/f2.jpg">
 				</div>
