--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -347,15 +347,56 @@
 		<div class="arrivals-head"><h2>New Arrivals</h2></div>
 		<div class="arrivals-bottom">
 			<ul class="nbs-flexisel-ul">
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
+				<li class="nbs-flexisel-item">
+					<a href="product.html"><img src="images/a1.jpg" alt=""></a>
+					<div class="arrival-info">
+						<h4>Fusion Black Polyester Suits</h4>
+						<p>Rs 12000</p>
+						<span class="pric1"><del>Rs 8500</del></span>
+						<span class="disc">[12% OFF]</span>
+					</div>
+					<div class="view"><a href="#">Quick View</a></div>
+					<div class="shrt"><a href="#">ShortList</a></div>
+				</li>
+				<li class="nbs-flexisel-item">
+					<a href="product.html"><img src="images/a2.jpg" alt=""></a>
+					<div class="arrival-info">
+						<h4>Fusion Black Polyester Suits</h4>
+						<p>Rs 12000</p>
+						<span class="pric1"><del>Rs 8500</del></span>
+						<span class="disc">[12% OFF]</span>
+					</div>
+					<div class="view"><a href="#">Quick View</a></div>
+					<div class="shrt"><a href="#">ShortList</a></div>
+				</li>
+				<li class="nbs-flexisel-item">
+					<a href="product.html"><img src="images/a3.jpg" alt=""></a>
+					<div class="arrival-info">
+						<h4>Fusion Black Polyester Suits</h4>
+						<p>Rs 12000</p>
+						<span class="pric1"><del>Rs 8500</del></span>
+						<span class="disc">[12% OFF]</span>
+					</div>
+					<div class="view"><a href="#">Quick View</a></div>
+					<div class="shrt"><a href="#">ShortList</a></div>
+				</li>
+				<li class="nbs-flexisel-item">
+					<a href="product.html"><img src="images/a4.jpg" alt=""></a>
+					<div class="arrival-info">
+						<h4>Fusion Black Polyester Suits</h4>
+						<p>Rs 12000</p>
+						<span class="pric1"><del>Rs 8500</del></span>
+						<span class="disc">[12% OFF]</span>
+					</div>
+					<div class="view"><a href="#">Quick View</a></div>
+					<div class="shrt"><a href="#">ShortList</a></div>
+				</li>
 				<li class="nbs-flexisel-item"></li>
 				<li class="nbs-flexisel-item"></li>
 				<li class="nbs-flexisel-item"></li>
 				<li class="nbs-flexisel-item"></li>
 			</ul>
+			<div class="clear"></div>
 			<div class="nbs-flexisel-nav-left"></div>
 			<div class="nbs-flexisel-nav-right"></div>
 		</div>
