--- a/weddingstore-by-me/index.html
+++ b/weddingstore-by-me/index.html
@@ -346,8 +346,8 @@
 	<div class="container">
 		<div class="arrivals-head"><h2>New Arrivals</h2></div>
 		<div class="arrivals-bottom">
-			<ul class="nbs-flexisel-ul">
-				<li class="nbs-flexisel-item">
+			<ul id="flexiselDemo1">
+				<li style="width:283px;">
 					<a href="product.html"><img src="images/a1.jpg" alt=""></a>
 					<div class="arrival-info">
 						<h4>Fusion Black Polyester Suits</h4>
@@ -355,10 +355,10 @@
 						<span class="pric1"><del>Rs 8500</del></span>
 						<span class="disc">[12% OFF]</span>
 					</div>
-					<div class="view"><a href="#">Quick View</a></div>
-					<div class="shrt"><a href="#">ShortList</a></div>
+					<div class="fea-1-sp1 fea-1-sp"><a href="#" class="fea-1-aa">Quick View</a></div>
+					<div class="fea-1-sp2 fea-1-sp"><a href="#" class="fea-1-aa">ShortList</a></div>
 				</li>
-				<li class="nbs-flexisel-item">
+				<li style="width:283px;">
 					<a href="product.html"><img src="images/a2.jpg" alt=""></a>
 					<div class="arrival-info">
 						<h4>Fusion Black Polyester Suits</h4>
@@ -366,10 +366,10 @@
 						<span class="pric1"><del>Rs 8500</del></span>
 						<span class="disc">[12% OFF]</span>
 					</div>
-					<div class="view"><a href="#">Quick View</a></div>
-					<div class="shrt"><a href="#">ShortList</a></div>
+					<div class="fea-1-sp1 fea-1-sp"><a href="#" class="fea-1-aa">Quick View</a></div>
+					<div class="fea-1-sp2 fea-1-sp"><a href="#" class="fea-1-aa">ShortList</a></div>
 				</li>
-				<li class="nbs-flexisel-item">
+				<li style="width:283px;">
 					<a href="product.html"><img src="images/a3.jpg" alt=""></a>
 					<div class="arrival-info">
 						<h4>Fusion Black Polyester Suits</h4>
@@ -377,10 +377,10 @@
 						<span class="pric1"><del>Rs 8500</del></span>
 						<span class="disc">[12% OFF]</span>
 					</div>
-					<div class="view"><a href="#">Quick View</a></div>
-					<div class="shrt"><a href="#">ShortList</a></div>
+					<div class="fea-1-sp1 fea-1-sp"><a href="#" class="fea-1-aa">Quick View</a></div>
+					<div class="fea-1-sp2 fea-1-sp"><a href="#" class="fea-1-aa">ShortList</a></div>
 				</li>
-				<li class="nbs-flexisel-item">
+				<li style="width:283px;">
 					<a href="product.html"><img src="images/a4.jpg" alt=""></a>
 					<div class="arrival-info">
 						<h4>Fusion Black Polyester Suits</h4>
@@ -388,17 +388,37 @@
 						<span class="pric1"><del>Rs 8500</del></span>
 						<span class="disc">[12% OFF]</span>
 					</div>
-					<div class="view"><a href="#">Quick View</a></div>
-					<div class="shrt"><a href="#">ShortList</a></div>
+					<div class="fea-1-sp1 fea-1-sp"><a href="#" class="fea-1-aa">Quick View</a></div>
+					<div class="fea-1-sp2 fea-1-sp"><a href="#" class="fea-1-aa">ShortList</a></div>
 				</li>
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
-				<li class="nbs-flexisel-item"></li>
 			</ul>
-			<div class="clear"></div>
-			<div class="nbs-flexisel-nav-left"></div>
-			<div class="nbs-flexisel-nav-right"></div>
+			 <script type="text/javascript">
+				 $(window).load(function() {			
+				  $("#flexiselDemo1").flexisel({
+					visibleItems: 4,
+					animationSpeed: 1000,
+					autoPlay: true,
+					autoPlaySpeed: 3000,    		
+					pauseOnHover:true,
+					enableResponsiveBreakpoints: true,
+					responsiveBreakpoints: { 
+						portrait: { 
+							changePoint:480,
+							visibleItems: 1
+						}, 
+						landscape: { 
+							changePoint:640,
+							visibleItems: 2
+						},
+						tablet: { 
+							changePoint:768,
+							visibleItems: 3
+						}
+					}
+				});
+				});
+			 	</script>
+			 	<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 		</div>
 	</div>
 </div>
