--- a/weddingstore-by-me/product.html
+++ b/weddingstore-by-me/product.html
@@ -153,6 +153,11 @@
 					<li>
 						<div>
 							<img src="images/p1.jpg">
+							<div class="b-wrapper">
+								<h4 class="b-animate b-form-left b-delay03">
+									<button class="btns"><span class="glyphicon glyphicon-zooom0in" aria-hidden="true"></span>Quick View</button>
+								</h4>
+							</div>
 						</div>
 						<p class="bottom-p1">Jewellery #1</p>
 						<p class="bottom-p2">ID:SR4598</p>
