--- a/weddingstore-by-me/product.html
+++ b/weddingstore-by-me/product.html
@@ -146,18 +146,27 @@
 		</div>
 		<div class="product-main-bottom">
 			<div class="product-bottom-left">
-				<p>aaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+				<section class="sky-form">
+					<div class="product_right">
+						<h4>categories</h4>
+					</div>
+					<div class="tab1"></div>
+					<div class="tab2"></div>
+					<div class="tab3"></div>
+					<div class="tab4"></div>
+					<div class="tab5"></div>
+				</section>
 			</div>
 			<div class="product-bottom-right">
 				<ul>
 					<li>
 						<div>
 							<img src="images/p1.jpg">
-							<div class="b-wrapper">
+							<!-- <div class="b-wrapper">
 								<h4 class="b-animate b-form-left b-delay03">
 									<button class="btns"><span class="glyphicon glyphicon-zooom0in" aria-hidden="true"></span>Quick View</button>
 								</h4>
-							</div>
+							</div> -->
 						</div>
 						<p class="bottom-p1">Jewellery #1</p>
 						<p class="bottom-p2">ID:SR4598</p>
