--- a/JavaScript_DOM编程艺术/9-2/itinerary.html
+++ b/JavaScript_DOM编程艺术/9-2/itinerary.html
@@ -4,8 +4,11 @@
 	<meta charset="utf-8" />
 	<title>Cities</title>
 	<link rel="stylesheet" type="text/css" href="styles/format.css">
+	<script type="text/javascript" src="scripts/addLoadEvent.js"></script>
 	<script type="text/javascript" src="scripts/striptable.js"></script>
 	<script type="text/javascript" src="scripts/displayAbbreviations.js"></script>
+	<script type="text/javascript" src="scripts/highLightRows.js"></script>
+	<script type="text/javascript" src="scripts/addClass.js"></script>
 </head>
 <body>
 <table>
