--- a/My-jingdong/index.html
+++ b/My-jingdong/index.html
@@ -4,24 +4,141 @@
 	<meta charset="utf-8" />
 	<title>京东首页</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script type="text/javascript" src="scripts/addLoadEvent.js"></script>
+	<script type="text/javascript" src="scripts/mouseOver.js"></script>
 </head>
 <body>
 <header>
 	<div class="container">
 		<ul class="fl">
 			<li class="dropdown">
-				<div class="dt cw-icon">
+				<div class="dt cw-icon" id="dt">
 					<i class="ci-right"><s>◇</s></i>送至:
 					<span>北京</span>
+				</div>
+				<div class="dd-spacer"></div>
+				<div class="ui-areamini-content-list" id="ui">
+					<div class="item">
+						<a href="javascript:void(0)">北京</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">上海</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">天津</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">重庆</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">河北</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">山西</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">河南</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">辽宁</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">吉林</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">黑龙江</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">内蒙古</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">江苏</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">山东</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">安徽</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">浙江</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">福建</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">湖北</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">湖南</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">广东</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">广西</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">江西</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">四川</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">海南</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">贵州</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">云南</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">西藏</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">陕西</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">甘肃</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">青海</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">宁夏</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">新疆</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">台湾</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">香港</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">澳门</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">钓鱼岛</a>
+					</div>
+					<div class="item">
+						<a href="javascript:void(0)">海外</a>
+					</div>
 				</div>
 			</li>
 		</ul>
 		<ul class="fr">
 			<li class="fore1"><a href="#">你好，请登录</a>&nbsp;<a href="#">免费注册</a></li>
 			<li class="spacer"></li>
-			<li class="fore2"><i class="ci-right"><s>◇</s></i><a href="#">我的订单</a></li>
+			<li class="fore2"><a href="#">我的订单</a></li>
 			<li></li>
-			<li class="fore3"><a href="#">我的京东</a></li>
+			<li class="fore3">
+				<!-- <div class="dt cw-icon">
+					<i class="ci-right"><s>◇</s></i>
+				</div> -->
+				<a href="#">我的京东</a></li>
 			<li></li>
 			<li class="fore4"><a href="#">京东会员</a></li>
 			<li></li>
