--- a/My-jingdong/index.html
+++ b/My-jingdong/index.html
@@ -130,30 +130,47 @@
 			</li>
 		</ul>
 		<ul class="fr">
-			<li class="fore1"><a href="#">你好，请登录</a>&nbsp;<a href="#">免费注册</a></li>
+			<li class="fore1">
+				<div class="dt"><a href="#">你好，请登录</a>&nbsp;<a href="#" class="style-red">免费注册</a></div>
+			</li>
 			<li class="spacer"></li>
-			<li class="fore2"><a href="#">我的订单</a></li>
-			<li></li>
-			<li class="fore3">
-				<!-- <div class="dt cw-icon">
-					<i class="ci-right"><s>◇</s></i>
-				</div> -->
-				<a href="#">我的京东</a></li>
-			<li></li>
-			<li class="fore4"><a href="#">京东会员</a></li>
-			<li></li>
-			<li class="fore5"><a href="#">企业采购</a></li>
-			<li></li>
-			<li class="fore6"><i class="ci-right"><s>◇</s></i><a href="#">手机京东</a></li>
-			<li></li>
-			<li class="fore7"><i class="ci-right"><s>◇</s></i><a href="#">关注京东</a></li>
-			<li></li>
-			<li class="fore8"><i class="ci-right"><s>◇</s></i><a href="#">客户服务</a></li>
-			<li></li>
-			<li class="fore9"><i class="ci-right"><s>◇</s></i><a href="#">网站导航</a></li>
+			<li class="fore2"><div class="dt"><a href="#">我的订单</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore3"><div class="dt"><a href="#">我的京东</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore4"><div class="dt"><a href="#">京东会员</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore5"><div class="dt"><a href="#">企业采购</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore6" id="ttbar-apps">
+				<div class="dt cw-icon">
+					<i class="ci-left"></i>
+					<i class="ci-right">
+					<s>◇</s>
+					</i>
+					<a href="http://app/jd.com/" target="_blank">手机京东</a>
+				</div>
+			</li>
+			<li class="spacer"></li>
+			<li class="fore7"><div class="dt"><a href="#">关注京东</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore8"><div class="dt"><a href="#">客户服务</a></div></li>
+			<li class="spacer"></li>
+			<li class="fore9"><div class="dt"><a href="#">网站导航</a></div></li>
 		</ul>
 		<div class="clear"></div>
 	</div>
 </header>
+<div class="w">
+	<div class="container">
+		<div id="logo-2014">
+			<a href="http://www.jd.com" class="logo">京东</a>
+		</div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div class="clear"></div>
+	</div>
+</div>
 </body>
 </html>
