--- a/My-jingdong/index.html
+++ b/My-jingdong/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>京东首页</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 	<script type="text/javascript" src="scripts/addLoadEvent.js"></script>
 	<script type="text/javascript" src="scripts/mouseOver.js"></script>
 </head>
@@ -166,8 +167,20 @@
 		<div id="logo-2014">
 			<a href="http://www.jd.com" class="logo">京东</a>
 		</div>
-		<div></div>
-		<div></div>
+		<div id="search-2014">
+			<div class="form">
+				<input type="text" class="text"></input>
+				<button class="button">搜索</button>
+			</div>
+		</div>
+		<div id="settleup-2014" class="dropdown">
+			<div class="cw-icon">
+				<i class="ci-left"></i>
+				<i class="ci-right"></i>
+				<i class="ci-count" id="shopping-amount"></i>
+				<a href="http://cart.jd.com/cart">我的购物车</a>
+			</div>
+		</div>
 		<div></div>
 		<div class="clear"></div>
 	</div>
