--- a/My-jingdong/index.html
+++ b/My-jingdong/index.html
@@ -17,7 +17,8 @@
 					<i class="ci-right"><s>◇</s></i>送至:
 					<span>北京</span>
 				</div>
-				<div class="dd-spacer"></div>
+				<div class="dd">
+					<div class="dd-spacer"></div>
 				<div class="ui-areamini-content-list" id="ui">
 					<div class="item">
 						<a href="javascript:void(0)">北京</a>
@@ -128,6 +129,7 @@
 						<a href="javascript:void(0)">海外</a>
 					</div>
 				</div>
+				</div>
 			</li>
 		</ul>
 		<ul class="fr">
@@ -176,12 +178,19 @@
 		<div id="settleup-2014" class="dropdown">
 			<div class="cw-icon">
 				<i class="ci-left"></i>
-				<i class="ci-right"></i>
-				<i class="ci-count" id="shopping-amount"></i>
+				<i class="ci-right">></i>
+				<i class="ci-count" id="shopping-amount">1</i>
 				<a href="http://cart.jd.com/cart">我的购物车</a>
 			</div>
 		</div>
-		<div></div>
+		<div id="hotwords">
+			<a href="#">闪购特卖</a>
+			<a href="#">闪购秒杀</a>
+			<a href="#">空气净化器</a>
+			<a href="#">组装电脑</a>
+			<a href="#">手机</a>
+			<a href="#">黄金饰品</a>
+		</div>
 		<div class="clear"></div>
 	</div>
 </div>
