--- a/My-jingdong/index.html
+++ b/My-jingdong/index.html
@@ -17,119 +17,119 @@
 					<i class="ci-right"><s>◇</s></i>送至:
 					<span>北京</span>
 				</div>
-				<div class="dd">
+				<!-- <div class="dd">
 					<div class="dd-spacer"></div>
-				<div class="ui-areamini-content-list" id="ui">
-					<div class="item">
-						<a href="javascript:void(0)">北京</a>
+					<div class="ui-areamini-content-list" id="ui">
+						<div class="item">
+							<a href="javascript:void(0)">北京</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">上海</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">天津</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">重庆</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">河北</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">山西</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">河南</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">辽宁</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">吉林</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">黑龙江</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">内蒙古</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">江苏</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">山东</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">安徽</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">浙江</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">福建</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">湖北</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">湖南</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">广东</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">广西</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">江西</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">四川</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">海南</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">贵州</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">云南</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">西藏</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">陕西</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">甘肃</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">青海</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">宁夏</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">新疆</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">台湾</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">香港</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">澳门</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">钓鱼岛</a>
+						</div>
+						<div class="item">
+							<a href="javascript:void(0)">海外</a>
+						</div>
 					</div>
-					<div class="item">
-						<a href="javascript:void(0)">上海</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">天津</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">重庆</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">河北</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">山西</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">河南</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">辽宁</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">吉林</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">黑龙江</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">内蒙古</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">江苏</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">山东</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">安徽</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">浙江</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">福建</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">湖北</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">湖南</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">广东</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">广西</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">江西</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">四川</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">海南</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">贵州</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">云南</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">西藏</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">陕西</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">甘肃</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">青海</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">宁夏</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">新疆</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">台湾</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">香港</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">澳门</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">钓鱼岛</a>
-					</div>
-					<div class="item">
-						<a href="javascript:void(0)">海外</a>
-					</div>
-				</div>
-				</div>
+				</div> -->
 			</li>
 		</ul>
 		<ul class="fr">
@@ -171,7 +171,7 @@
 		</div>
 		<div id="search-2014">
 			<div class="form">
-				<input type="text" class="text"></input>
+				<input type="text" class="text" placeholder="SKII"></input>
 				<button class="button">搜索</button>
 			</div>
 		</div>
@@ -191,6 +191,244 @@
 			<a href="#">手机</a>
 			<a href="#">黄金饰品</a>
 		</div>
+		<div class="clear"></div>
+	</div>
+</div>
+<div id="nav-2014">
+	<div class="container">
+		<div>
+			<div class="dt">
+				<a href="#">全部商品分类</a>
+			</div>
+		</div>
+		<div class="nav-right">
+			<ul>
+				<li><a href="#">服装城</a></li>
+				<li><a href="#">美妆程</a></li>
+				<li><a href="#">超市</a></li>
+				<li><a href="#">全球购</a></li>
+				<li><a href="#">闪购</a></li>
+				<li><a href="#">团购</a></li>
+				<li><a href="#">拍卖</a></li>
+				<li><a href="#">金融</a></li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+</div>
+<div id="focus">
+	<div class="container">
+		<div class="focus-left">
+			<div class="item-f" id="item-f">
+				<h3><a href="#">家用电器</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">手机、数码、京东通信</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">电脑、办公</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">家居、家具、家装、厨具</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">男装、女装、内衣、珠宝</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">个护化妆、清洁用品</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">鞋靴、箱包、钟表、奢侈品</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">运动户外</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">汽车、汽车用品</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">母婴、玩具乐器</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">食品、酒类、生鲜、特产</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">营养保健</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">图书、音像、电子书</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">彩票、旅行、充值、票务</a><i>></i></h3>
+			</div>
+			<div class="item-f">
+				<h3><a href="#">理财、众筹、白条、保险</a><i>></i></h3>
+			</div>
+		</div>
+		<div class="item-hide" id="item-ff">
+			<div class="item-hide-l">
+				<div class="item-head">
+					<div class="item-list">
+						<a href="#">品牌日<i>></i></a>
+					</div>
+					<div class="item-list">
+						<a href="#">家电城<i>></i></a>
+					</div>
+					<div class="item-list">
+						<a href="#">智能生活馆<i>></i></a>
+					</div>
+					<div class="item-list">
+						<a href="#">京东净化馆<i>></i></a>
+					</div>
+					<div class="item-list">
+						<a href="#">京东帮服务店<i>></i></a>
+					</div>
+					<div class="item-list">
+						<a href="#">值得买精选<i>></i></a>
+					</div>
+				</div>
+				<div class="item-body">
+					<dl class="fore1">
+						<dt><a href="#">大家电<i>></i></a></dt>
+						<dd>
+							<a href="#">平板电视</a>
+							<a href="#">空调</a>
+							<a href="#">冰箱</a>
+							<a href="#">洗衣机</a>
+							<a href="#">家庭影院</a>
+							<a href="#">DVD</a>
+							<a href="#">迷你音响</a>
+							<a href="#">冷柜/冰吧</a>
+							<a href="#">酒柜</a>
+							<a href="#">家电配件</a>
+						</dd>
+					</dl>
+					<dl class="fore2">
+						<dt><a href="#">厨卫大电<i>></i></a></dt>
+						<dd>
+							<a href="#">油烟机</a>
+							<a href="#">燃气灶</a>
+							<a href="#">烟灶套装</a>
+							<a href="#">消毒柜</a>
+							<a href="#">洗碗机</a>
+							<a href="#">电热水器</a>
+							<a href="#">燃气热水器</a>
+							<a href="#">嵌入式厨电</a>
+						</dd>
+					</dl>
+					<dl class="fore3">
+						<dt><a href="#">厨房小电<i>></i></a></dt>
+						<dd>
+							<a href="#">电饭煲</a>
+							<a href="#">微波炉</a>
+							<a href="#">电烤箱</a>
+							<a href="#">电磁炉</a>
+							<a href="#">电压力锅</a>
+							<a href="#">豆浆机</a>
+							<a href="#">咖啡机</a>
+							<a href="#">面包机</a>
+							<a href="#">榨汁机</a>
+							<a href="#">料理机</a>
+							<a href="#">电饼铛</a>
+							<a href="#">养生壶/煎药壶</a>
+							<a href="#">酸奶机</a>
+							<a href="#">煮蛋器</a>
+							<a href="#">电水壶/热水壶</a>
+							<a href="#">电炖锅</a>
+							<a href="#">多用途锅</a>
+							<a href="#">电烧烤炉</a>
+							<a href="#">电热饭盒</a>
+							<a href="#">其它厨房电器</a>
+						</dd>
+					</dl>
+					<dl class="fore4">
+						<dt><a href="#">生活电器<i>></i></a></dt>
+						<dd>
+							<a href="#">取暖电器</a>
+							<a href="#">净化器</a>
+							<a href="#">扫地机器人</a>
+							<a href="#">吸尘器</a>
+							<a href="#">加湿器</a>
+							<a href="#">挂烫机/熨斗</a>
+							<a href="#">电风扇</a>
+							<a href="#">冷风扇</a>
+							<a href="#">插座</a>
+							<a href="#">电话机</a>
+							<a href="#">净水器</a>
+							<a href="#">饮水机</a>
+							<a href="#">除湿器</a>
+							<a href="#">干衣机</a>
+							<a href="#">清洁机</a>
+							<a href="#">收录/音机</a>
+							<a href="#">其它生活电器</a>
+							<a href="#">生活电器配件</a>
+						</dd>
+					</dl>
+					<dl class="fore5">
+						<dt><a href="#">个护健康<i>></i></a></dt>
+						<dd>
+							<a href="#">剃须刀</a>
+							<a href="#">剃/脱毛器</a>
+							<a href="#">口腔护理</a>
+							<a href="#">电吹风</a>
+							<a href="#">美容器</a>
+							<a href="#">理发器</a>
+							<a href="#">卷/直发器</a>
+							<a href="#">按摩椅</a>
+							<a href="#">按摩器</a>
+							<a href="#">足浴盆</a>
+							<a href="#">血压计</a>
+							<a href="#">健康秤/厨房秤</a>
+							<a href="#">血糖仪</a>
+							<a href="#">体温计</a>
+							<a href="#">计步器/脂肪检测仪</a>
+							<a href="#">其它健康电器</a>
+						</dd>
+					</dl>
+					<dl class="fore6">
+						<dt><a href="#">五金家装<i>></i></a></dt>
+						<dd>
+							<a href="#">电动工具</a>
+							<a href="#">手动工具</a>
+							<a href="#">仪器仪表</a>
+							<a href="#">浴霸/排气扇</a>
+							<a href="#">灯具</a>
+							<a href="#">LED灯</a>
+							<a href="#">洁身器</a>
+							<a href="#">水槽</a>
+							<a href="#">龙头</a>
+							<a href="#">淋浴花洒</a>
+							<a href="#">厨卫五金</a>
+							<a href="#">家具五金</a>
+							<a href="#">门铃</a>
+							<a href="#">电气开关</a>
+							<a href="#">插座</a>
+							<a href="#">电工电科</a>
+							<a href="#">监控安防</a>
+							<a href="#">电线/线缆</a>
+						</dd>
+					</dl>
+				</div>
+			</div>
+			<div class="item-hide-r">
+				<div class="brands">
+					<a href="#"><img src="http://img10.360buyimg.com/vclist/jfs/t2176/358/849877519/2001/3cb2806f/562f4971Na5379aba.jpg"></a>
+					<a href="#"><img src="http://img11.360buyimg.com/vclist/jfs/t745/301/749830018/3039/9c96d09e/54d9eef9N5bb8d27f.jpg"></a>
+					<a href="#"><img src="http://img12.360buyimg.com/vclist/jfs/t742/296/752313526/2128/67ff82d9/54d9ef02N99d26435.jpg"></a>
+					<a href="#"><img src="http://img13.360buyimg.com/vclist/jfs/t643/241/1441917153/1991/b7f68956/54d9ef10Nd206a236.jpg"></a>
+					<a href="#"><img src="http://img14.360buyimg.com/vclist/jfs/t703/273/787686128/2436/5299f29d/54d9ef28N00328d44.jpg"></a>
+					<a href="#"><img src="http://img10.360buyimg.com/vclist/jfs/t820/181/3448454/2372/cbfc2389/54d9ef34N7cc61f4c.jpg"></a>
+					<a href="#"><img src="http://img11.360buyimg.com/vclist/jfs/t475/29/1411508579/2230/64183923/54d9ef3eN99aef1f0.jpg"></a>
+					<a href="#"><img src="http://img12.360buyimg.com/vclist/jfs/t700/76/767891003/1472/c20aa630/54d9ef4cN4fe57f9b.jpg"></a>
+				</div>
+				<div class="brands-2">
+					<a href="#"><img src="http://img13.360buyimg.com/vclist/jfs/t2188/329/2140154297/5836/1dd93fa2/56aed295N3547d62e.jpg"></a>
+					<a href="#"><img src="http://img14.360buyimg.com/vclist/jfs/t1924/120/2666445282/3887/e8d7ef86/56e43bddN4e71c973.jpg"></a>
+				</div>
+			</div>
+		</div>
+		<div class="focus-middle"></div>
+		<div class="focus-right"></div>
 		<div class="clear"></div>
 	</div>
 </div>
