--- a/My-JD/index.html
+++ b/My-JD/index.html
@@ -427,9 +427,114 @@
 				</div>
 			</div>
 		</div>
-		<div class="focus-middle"></div>
-		<div class="focus-right"></div>
+		<div class="focus-middle" id="flash">
+			<ul id="pic">
+				<li class="slider-panel"><a href="#"><img src="http://img12.360buyimg.com/da/jfs/t2449/119/2635518559/97698/eb554b0/56e22f1dN4ccea84a.jpg"></a></li>
+				<li class="slider-panel" style="display: none;"><a href="#"><img src="http://img12.360buyimg.com/da/jfs/t2431/107/1848477878/200944/2174433c/56de4d48N3fd73484.jpg"></a></li>
+				<li class="slider-panel" style="display: none;"><a href="#"><img src="http://img10.360buyimg.com/da/jfs/t2344/62/1861590960/191431/721aa682/56e13331Nfe030a22.jpg"></a></li>
+				<li class="slider-panel" style="display: none;"><a href="#"><img src="http://img11.360buyimg.com/da/jfs/t2347/68/1910323388/103467/c9059999/56e21cc8Nc153fb17.jpg"></a></li>
+				<li class="slider-panel" style="display: none;"><a href="#"><img src="http://img20.360buyimg.com/da/jfs/t2482/344/1896223088/99865/bae79a28/56e28bc2N8be16a22.jpg"></a></li>
+				<li class="slider-panel" style="display: none;"><a href="#"><img src="http://img14.360buyimg.com/da/jfs/t1948/148/2470415068/96864/76d1355d/56dcf612Nb5baea93.jpg"></a></li>
+				<div class="clear"></div>
+			</ul>
+			<div class="slider-extra">
+				<ul class="slider-nav" id="num">
+					<li class="slider-item">1</li>
+					<li class="slider-item">2</li>
+					<li class="slider-item">3</li>
+					<li class="slider-item">4</li>
+					<li class="slider-item">5</li>
+					<li class="slider-item">6</li>
+				</ul>
+				<div class="slider-page">
+					<a href="javascript:void(0)" class="slider-prev" id="left"><</a>
+					<a href="javascript:void(0)" class="slider-next" id="right">></a>
+				</div>
+			</div>
+			<div class="clear"></div>
+		</div>
+		<div class="focus-right">
+			<div id="news">
+				<div class="mt">
+					<h2>京东快报</h2>
+					<div class="extra">
+						<a href="#">更多></a>
+					</div>
+				</div>
+				<div class="mc">
+					<ul>
+						<li><a href="#"><span>[特惠]</span>欧德煲牛奶兄弟慧 新品推荐！</a></li>
+						<li><a href="#"><span>[公告]</span>厦门大件运营中心搬迁</a></li>
+						<li><a href="#"><span>[特惠]</span>iPad Air 2199送支架，抢抢抢！</a></li>
+						<li><a href="#"><span>[公告]</span>北京城区部分区域配送延迟</a></li>
+						<li><a href="#"><span>[特惠]</span>低至5折，2999抢i7超极本</a></li>
+					</ul>
+				</div>
+			</div>
+			<div></div>
+			<div></div>
+		</div>
 		<div class="clear"></div>
+		<script type="text/javascript">
+			function $(id) { return typeof id==='string'?document.getElementById(id):id;
+		    }
+		    window.onload=function(){
+		      var index=0;
+		      var timer=null;
+		      var pic=$("pic").getElementsByTagName("li");
+		      var num=$("num").getElementsByTagName("li");
+		      var flash=$("flash");
+		      var left=$("left");
+		      var right=$("right");
+		      //单击左箭头
+		      left.onclick=function(){
+		        index--;
+		        if (index<0) {index=num.length-1};
+		        changeOption(index);
+		      }
+		      //单击右箭头
+		      right.onclick=function(){
+		        index++;
+		        if (index>=num.length) {index=0};
+		        changeOption(index);
+		      }      
+		      //鼠标划在窗口上面，停止计时器
+		      flash.onmouseover=function(){
+		        clearInterval(timer);
+		      }
+		      //鼠标离开窗口，开启计时器
+		      flash.onmouseout=function(){
+		        timer=setInterval(run,2000)
+		      }
+		      //鼠标划在页签上面，停止计时器，手动切换
+		      for(var i=0;i<num.length;i++){
+		        num[i].id=i;
+		        num[i].onmouseover=function(){
+		          clearInterval(timer);
+		          changeOption(this.id);
+		        }
+		      }    
+		      //定义计时器
+		      timer=setInterval(run,2000)
+		      //封装函数run
+		      function run(){
+		        index++;
+		        if (index>=num.length) {index=0};
+		        changeOption(index);
+		      }
+		      //封装函数changeOption
+		      function changeOption(curindex){
+		        console.log(index)
+		        for(var j=0;j<num.length;j++){
+		          pic[j].style.display="none";
+		          num[j].className="";
+		        }
+		        pic[curindex].style.display="block";
+		        num[curindex].className="active";
+		        index=curindex;
+		      }
+		    }
+		</script>
 	</div>
 </div>
 </body>
